[package]
name = "crab-gallery"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
chrono = { version = "0.4.45", features = ["serde"] }
libvips = "2.3.0"
mimetype-detector = "0.3.10"
serde = { version = "1.0.228", features = ["derive"] }
tera = { version = "2.0.0", features = ['glob_fs'] }
tokio = { version = "1.52.3", features = ["full"] }
walkdir = "2.5.0"
